<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="match_parent">
            <Button
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/merge_data_begin"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/mergedata_button_selector"
                android:text="开始合并数据"
                android:textColor="@color/textColor"
                android:textSize="12sp" />

            <Button
                android:layout_below="@+id/merge_data_begin"
                android:layout_centerHorizontal="true"
                android:id="@+id/merge_data_importrecord"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/mergedata_button_selector"
                android:text="@string/import_record"
                android:textColor="@color/textColor"
                android:textSize="12sp" />

            <Button
                android:layout_below="@id/merge_data_importrecord"
                android:layout_centerHorizontal="true"
                android:id="@+id/merge_data_importfiles"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/mergedata_button_selector"
                android:text="@string/import_files"
                android:textColor="@color/textColor"
                android:textSize="12sp" />
            <Button
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/merge_data_clearfiles"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/mergedata_button_selector"
                android:text="@string/clear_imported_files"
                android:textColor="@color/colorAccent"
                android:textSize="12sp" />

        </RelativeLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginRight="1dp"-->
<!--            android:background="@color/background"-->
<!--            android:orientation="vertical">-->

<!--            <Button-->
<!--                android:id="@+id/merge_data_begin"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="64dp"-->
<!--                android:layout_margin="8dp"-->
<!--                android:background="@drawable/mergedata_button_selector"-->
<!--                android:text="开始合并数据"-->
<!--                android:textColor="@color/textColor"-->
<!--                android:textSize="14sp" />-->

<!--            <Button-->
<!--                android:id="@+id/merge_data_importrecord"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="64dp"-->
<!--                android:layout_margin="8dp"-->
<!--                android:background="@drawable/mergedata_button_selector"-->
<!--                android:text="@string/import_record"-->
<!--                android:textColor="@color/textColor"-->
<!--                android:textSize="14sp" />-->

<!--            <Button-->
<!--                android:id="@+id/merge_data_importfiles"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="64dp"-->
<!--                android:layout_margin="8dp"-->
<!--                android:background="@drawable/mergedata_button_selector"-->
<!--                android:text="@string/import_files"-->
<!--                android:textColor="@color/textColor"-->
<!--                android:textSize="14sp" />-->
<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp"-->
<!--                android:layout_weight="1"/>-->

<!--            <Button-->
<!--                android:id="@+id/merge_data_clearfiles"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="64dp"-->
<!--                android:layout_margin="8dp"-->
<!--                android:background="@drawable/mergedata_button_selector"-->
<!--                android:text="@string/clear_imported_files"-->
<!--                android:textColor="@color/colorAccent"-->
<!--                android:textSize="14sp" />-->

<!--        </LinearLayout>-->

        <android.support.v7.widget.RecyclerView
            android:id="@+id/merge_data_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="8dp"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>